# pyservice-wrapper

./: .gitignore  README.md  build.py  pyproject.toml  tasks.py
src/service_wrapper/: __init__.py  base_service.py  ext.py  service_tools.py  service_wrapper.py  service_wrapper_utils.py  utils.py  wrapper.py
src/service_wrapper/linux/: linux_tools.py  linux_wrapper.py  systemd.py  template.service
src/service_wrapper/utils/: service_tools.py  utils.py
src/service_wrapper/windows/: ext.py  service_tools.py  service_utils.py  windows_wrapper.py
